--- a/style.css
+++ b/style.css
@@ -1,3 +1,54 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*--------------------------------------Our Stuff--------------------------------------*/
+
 body {
   background: #FFF;
   color: #000;
@@ -10,7 +61,6 @@ body {
 	position: absolute;
 	font-size: 20px;
 	font-weight: bold;
-	vertical-align: middle;
 }
 
 #titlebar{
@@ -28,6 +78,7 @@ body {
 }
 
 #content{
+	position: relative;
 	background-color: #FFF;
 	padding: 0px;
   	margin-top: 30px;
@@ -38,7 +89,7 @@ body {
 
 #lpanel{
 	background-color: #FF0000;
-	float: left; 
+	float: left;
 	width: 30%;
     height: 100%;
 }
