--- a/static/style.css
+++ b/static/style.css
@@ -106,6 +106,16 @@ textarea {
     height: 100%;
 }
 
+#file_select {
+	z-index: 10;
+	position: absolute;
+	left: 0;
+	top: 50;
+	background-color: white;
+	width: 100%;
+	height: 100%;
+}
+
 .clear{
     clear:both;
 }
