--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,14 @@ textarea {
 	/*border-top: 1px solid #FFF;*/
 }
 
+#file_select {
+	position: absolute;
+	top: 50;
+	background-color: white;
+	width: 100px;
+	height: 30px;
+}
+
 #content{
 	position: relative;
 	background-color: #FFF;
@@ -105,16 +113,6 @@ textarea {
 	float: left;
     width: 70%;
     height: 100%;
-}
-
-#file_select {
-	z-index: 10;
-	position: absolute;
-	left: 0;
-	top: 50;
-	background-color: white;
-	width: 100%;
-	height: 100%;
 }
 
 .clear{
