--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -59,7 +58,8 @@ body {
 }
 
 textarea {
-	width: 100%;
+	margin: auto auto;
+	width: 80%;
 	height: 300px;
 }
 
