added crude interface for file selection

--- a/static/style.css
+++ b/static/style.css
@@ -91,10 +91,11 @@ textarea {
 
 #file_select {
 	position: absolute;
-	top: 50;
+	top: 30px;
 	background-color: white;
-	width: 100px;
-	height: 30px;
+	width: 100%;
+	height: 100%;
+	z-index: 15;
 }
 
 #content{
@@ -104,7 +105,7 @@ textarea {
   	margin-top: 30px;
   	width: 100%;
   	height: 100%;
-  	z-index: 0;;
+  	z-index: 0;
 }
 
 #myCanvas {
