Added hover to file_selection rows and click events to them, see console

--- a/static/style.css
+++ b/static/style.css
@@ -147,6 +147,15 @@ textarea {
 	z-index: 10;
 }
 
+.file_row {
+	font-size: 20px;
+	background-color: #FFF;
+}
+
+.file_row:hover {
+	background-color: yellow;
+}
+
 .clear{
     clear:both;
 }
