--- a/static/style.css
+++ b/static/style.css
@@ -59,17 +59,26 @@ body {
 
 h2 {
 	display: inline;
-	padding: 20px;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	cursor: default;
 }
 
 textarea {
-	margin: auto auto;
-	width: 80%;
-	height: 300px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	width: 100%;
+	height: 400px;
 	font-family: 'Inconsolata', sans-serif;
+	resize: none;
 }
 
 #title{
+	padding-top: 4px;
 	position: absolute;
 	font-size: 20px;
 	font-weight: bold;
@@ -85,7 +94,7 @@ textarea {
 	height: 30px;
 	box-shadow: 0 0px 5px 0px black;
 	
-	z-index: 1;
+	z-index: 2;
 	/*border-top: 1px solid #FFF;*/
 }
 
@@ -101,7 +110,6 @@ textarea {
 #content{
 	position: relative;
 	background-color: #FFF;
-	padding: 0px;
   	margin-top: 30px;
   	width: 100%;
   	height: 100%;
@@ -115,19 +123,35 @@ textarea {
 }
 
 #lpanel{
-	background-color: #FF0000;
+	background-color: #E8E8E8;
 	float: left;
 	padding-top: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
 	width: 30%;
     height: 100%;
+    box-sizing: border-box;
+    border-right: 1px solid #000;
 }
 
 #rpanel{
-	background-color: #9999FF;
+	background-color: #E8E8E8;
 	float: left;
 	padding-top: 8px;
+	padding-left: 10px;
+	padding-right: 10px;
     width: 70%;
     height: 100%;
+    box-sizing: border-box;
+}
+
+#code_info{
+	padding-right: 10px;
+	font-weight: bold;
+}
+
+#visualizer{
+	padding-left: 10px;
 }
 
 #editor_area{
@@ -142,9 +166,10 @@ textarea {
 	position: absolute;
 	background-color: white;
 	top:30px;
+	padding-top: 8px;
 	height: 100%;
-	width:100%;
-	z-index: 10;
+	width: 100%;
+	z-index: 1;
 }
 
 .file_row {
