--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,12 @@ body {
   margin: 0px;
 }
 
+p {
+	margin-top: 12px;
+	margin-bottom: 12px;
+	margin-left: 12px;
+}
+
 h2 {
 	display: inline;
 	-webkit-user-select: none;
@@ -69,12 +75,13 @@ h2 {
 
 textarea {
 	display: block;
-    margin-left: auto;
-    margin-right: auto;
+    	/*margin-left: auto;
+    	margin-right: auto;*/
 	width: 100%;
-	height: 400px;
+	height: 80%;
 	font-family: 'Inconsolata', sans-serif;
 	resize: none;
+	margin: 12px auto;
 }
 
 #title{
@@ -128,9 +135,9 @@ textarea {
 	padding-left: 10px;
 	padding-right: 10px;
 	width: 30%;
-    height: 100%;
-    box-sizing: border-box;
-    border-right: 1px solid #000;
+    	height: 100%;
+   	box-sizing: border-box;
+    	border-right: 1px solid #000;
 }
 
 #rpanel{
@@ -139,9 +146,9 @@ textarea {
 	padding-top: 8px;
 	padding-left: 10px;
 	padding-right: 10px;
-    width: 70%;
-    height: 100%;
-    box-sizing: border-box;
+    	width: 70%;
+    	height: 100%;
+    	box-sizing: border-box;
 }
 
 #code_info{
@@ -159,6 +166,16 @@ textarea {
 
 #info_area{
 	margin-top: 12px;
+	height: 50%;
+}
+
+#warning_area{
+	float: left;
+	margin-left: 100px;
+}
+
+#stat_area{
+	float: left;
 }
 
 #login_div {
