--- a/static/style.css
+++ b/static/style.css
@@ -100,7 +100,7 @@ textarea {
 	top: 0px;
 	width: 100%;
 	height: 30px;
-	box-shadow: 0 0px 5px 0px black;
+	box-shadow: 0px 0px 5px 0px black;
 	display: inline;
 	z-index: 2;
 	/*border-top: 1px solid #FFF;*/
@@ -189,12 +189,6 @@ textarea {
 	z-index: 1;
 }
 
-#navbar {
-	display: inline;
-	list-style: none;
-}
-
-
 .file_row {
 	font-size: 20px;
 	background-color: #FFF;
@@ -204,11 +198,22 @@ textarea {
 	background-color: yellow;
 }
 
-.nav_button {
-	position: relative;
-	width: 150px;
+#navbar {
+	position: absolute;
+	left: 300px;
+	display: inline;
+	list-style: none;
+	width: 600px;
+}
+
+#create_file_popup {
+	text-align: center;
+	position: absolute;
+	top: 300px;
 	height: 30px;
-	margin: 0px;
+	width: 350px;
+	z-index: 15;
+	background-color: #8497a9;
 }
 
 .clear{
