--- a/static/style.css
+++ b/static/style.css
@@ -84,12 +84,12 @@ textarea {
 	margin: 12px auto;
 }
 
-#title{
+h1 {
 	padding-top: 4px;
 	position: relative;
 	font-size: 20px;
 	font-weight: bold;
-	width: 150px;
+	width: 200px;
 }
 
 #titlebar{
