--- a/static/style.css
+++ b/static/style.css
@@ -219,3 +219,27 @@ h1 {
 .clear{
     clear:both;
 }
+
+/*--------------------------------------Drawing Stuff--------------------------------------*/
+
+.function {
+	display:block;
+	width:100px;
+	height:100px;
+	border-radius:50px;
+	font-size:20px;
+	color:#fff;
+	line-height:100px;
+	text-shadow:0 1px 0 #666;
+	text-align:center;
+	text-decoration:none;
+	box-shadow:1px 1px 2px #000;
+	background:#cccbbb;opacity:0.95
+}
+
+.function:hover {
+	color:#eee;
+	text-shadow:0 0 1px #666;
+	text-decoration:none;
+	box-shadow:0 0 4px #222 inset;
+	opacity:1}
