--- a/static/style.css
+++ b/static/style.css
@@ -189,6 +189,16 @@ h1 {
 	z-index: 1;
 }
 
+input {
+	padding: 10px;
+	border-radius: 4px;
+ 	border: 1px solid #CCC;
+ 	box-shadow: 1px 1px 1px #FAFAFA;
+ 	background-color: #FFF;
+ 	font-size: 16px;
+ 	color: #555;
+}
+
 .file_row {
 	font-size: 17px;
 	background-color: #FFF;
