--- a/static/style.css
+++ b/static/style.css
@@ -84,17 +84,34 @@ textarea {
 	margin: 12px auto;
 }
 
-h1 {
+#title {
+	float: left;
 	padding-top: 4px;
+	padding-left: 10px;
+	padding-right: 10px;
 	position: relative;
 	font-size: 20px;
 	font-weight: bold;
-	width: 200px;
+}
+
+#navbar {
+	float: left;
+	position: relative;
+	top: 12px;
+	left: 0px;
+	display: inline;
+	list-style: none;
+	width: 300px;
+}
+
+.nav_button {
+	display: inline;
+	padding: 0px 8px;
 }
 
 #titlebar{
 	background: #8497a9;
-	padding: 0px 10px;
+	padding: 0px 0px;
 	margin: 0px 0px;
 	position: fixed;
 	top: 0px;
@@ -103,6 +120,7 @@ h1 {
 	box-shadow: 0px 0px 5px 0px black;
 	display: inline;
 	z-index: 2;
+	cursor: default;
 	/*border-top: 1px solid #FFF;*/
 }
 
@@ -200,20 +218,12 @@ input {
 }
 
 .file_row {
-	font-size: 17px;
+	font-size: 20px;
 	background-color: #FFF;
 }
 
 .file_row:hover {
 	background-color: yellow;
-}
-
-#navbar {
-	position: absolute;
-	left: 300px;
-	display: inline;
-	list-style: none;
-	width: 600px;
 }
 
 #create_file_popup {
@@ -283,4 +293,5 @@ button {
 	text-shadow:0 0 1px #666;
 	text-decoration:none;
 	box-shadow:0 0 4px #222 inset;
-	opacity:1}
+	opacity:1
+}
