--- a/static/style.css
+++ b/static/style.css
@@ -49,6 +49,8 @@ table {
 
 /*--------------------------------------Our Stuff--------------------------------------*/
 
+/*background color should be FFF7EB*/
+
 body {
   background: #FFF;
   color: #000;
@@ -70,6 +72,8 @@ h2 {
 	-moz-user-select: none;
 	-o-user-select: none;
 	user-select: none;
+	font-weight: bold;
+	font-size: 18px;
 	cursor: default;
 }
 
@@ -79,6 +83,7 @@ textarea {
 	height: 80%;
 	font-family: 'Inconsolata', sans-serif;
 	resize: none;
+	border: 1px solid #999;
 	margin: 12px auto;
 }
 
@@ -88,15 +93,16 @@ textarea {
 	padding-left: 10px;
 	padding-right: 10px;
 	position: relative;
-	font-size: 20px;
+	font-size: 23px;
 	font-weight: bold;
 }
 
 #navbar {
 	float: left;
 	position: relative;
-	top: 12px;
+	top: 10px;
 	left: 0px;
+	height: 20px;
 	display: inline;
 	list-style: none;
 	width: 300px;
@@ -104,17 +110,30 @@ textarea {
 
 .nav_button {
 	display: inline;
+	min-height: 25px;
 	padding: 0px 8px;
+	-webkit-transition: all 0.20s ease-in-out;
+}
+
+.nav_button:hover {
+	background-color: #CAD5E0;
+	box-shadow: 1px 1px 5px 1px #ADB9C4;
+
+}
+
+.left {
+	border-right: 1px solid #959DA6;
+
 }
 
 #titlebar{
-	background: #8497a9;
+	background: #C1CCD6;
 	padding: 0px 0px;
 	margin: 0px 0px;
 	position: fixed;
 	top: 0px;
 	width: 100%;
-	height: 30px;
+	height: 32px;
 	box-shadow: 0px 0px 5px 0px black;
 	display: inline;
 	z-index: 2;
@@ -146,7 +165,7 @@ textarea {
 }
 
 #lpanel{
-	background-color: #E8E8E8;
+	background-color: #FFF7EB;
 	float: left;
 	padding-top: 8px;
 	padding-left: 10px;
@@ -158,7 +177,7 @@ textarea {
 }
 
 #rpanel{
-	background-color: #E8E8E8;
+	background-color: #FFF7EB;
 	float: left;
 	padding-top: 8px;
 	padding-left: 10px;
@@ -197,7 +216,7 @@ textarea {
 
 #login_div {
 	position: absolute;
-	background-color: white;
+	background-color: #FFF7EB;
 	top:30px;
 	padding-top: 8px;
 	height: 100%;
@@ -215,13 +234,21 @@ input {
  	color: #555;
 }
 
+input:focus {
+    box-shadow: 0 0 5px rgba(193, 204, 214, 1);
+    -webkit-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
+    -moz-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
+}
+
+
 .file_row {
 	font-size: 20px;
-	background-color: #FFF;
+	padding: 6px;
+
 }
 
 .file_row:hover {
-	background-color: yellow;
+	background-color: #CAFAFA;
 }
 
 #create_file_popup {
