--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ table {
 /*background color should be FFFAF2*/
 
 body {
-  background: #FFF;
+  background: #FFFAF2;;
   color: #000;
   font-family: 'Raleway', sans-serif;
   padding: 0px;
@@ -67,12 +67,7 @@ p {
 
 h2 {
 	display: inline;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-o-user-select: none;
 	user-select: none;
-	font-weight: bold;
 	font-size: 18px;
 	cursor: default;
 }
@@ -90,7 +85,7 @@ textarea {
 #title {
 	float: left;
 	padding-top: 1px;
-	padding-left: 5%;
+	padding-left: 57px;
 	padding-right: 35px;
 	position: relative;
 }
@@ -150,10 +145,10 @@ textarea {
 #content{
 	position: relative;
 	background-color: #FFF;
-  	margin-top: 30px;
-  	width: 100%;
-  	height: 100%;
-  	z-index: 0;
+	margin-top: 30px;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
 }
 
 #myCanvas {
@@ -166,36 +161,47 @@ textarea {
 	background-color: #FFFAF2;
 	float: left;
 	padding-top: 12px;
-	padding-left: 10px;
-	padding-right: 10px;
-	width: 30%;
-    	height: 100%;
-   	box-sizing: border-box;
-    	border-right: 1px solid #000;
+	padding-left: 57px;
+	padding-right: 28px;
+	width: 40%;
+	height: 100%;
+	box-sizing: border-box;
+	border-right: 1px solid #000;
 }
 
 #rpanel{
 	background-color: #FFFAF2;
 	float: left;
 	padding-top: 12px;
-	padding-left: 10px;
-	padding-right: 10px;
-    	width: 70%;
-    	height: 100%;
-    	box-sizing: border-box;
+	padding-left: 29px;
+	padding-right: 57px;
+	width: 60%;
+	height: 100%;
+	box-sizing: border-box;
+}
+
+#editor_area{
+	margin-top: 12px;
+	height: 88%;
+}
+
+#compilation_level{
+	display:inline;
+}
+
+#optimize_checkbox{
+	display:inline;
+	font-size: 20px;
 }
 
 #code_info{
 	padding-right: 10px;
 	font-weight: bold;
+	padding-right:;
 }
 
 #visualizer{
 	padding-left: 10px;
-}
-
-#editor_area{
-	margin-top: 12px;
 }
 
 #info_area{
@@ -224,9 +230,9 @@ textarea {
 
 #userbar {
 	position: relative;
-	width: 250px;
 	float: right;
 	top: 10px;
+	right: 57px;
 }
 
 .user_button {
@@ -234,20 +240,25 @@ textarea {
 	display: inline;
 }
 
+
+.user_button:last-child {
+	padding-right: 0px;
+}
+
 input {
 	padding: 10px;
 	border-radius: 4px;
- 	border: 1px solid #CCC;
- 	box-shadow: 1px 1px 1px #FAFAFA;
- 	background-color: #FFF;
- 	font-size: 16px;
- 	color: #555;
+	border: 1px solid #CCC;
+	box-shadow: 1px 1px 1px #FAFAFA;
+	background-color: #FFF;
+	font-size: 16px;
+	color: #555;
 }
 
 input:focus {
-    box-shadow: 0 0 5px rgba(193, 204, 214, 1);
-    -webkit-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
-    -moz-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
+	box-shadow: 0 0 5px rgba(193, 204, 214, 1);
+	-webkit-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
+	-moz-box-shadow: 0 0 5px rgba(193, 204, 214, 1); 
 }
 
 
@@ -272,7 +283,7 @@ input:focus {
 }
 
 .clear{
-    clear:both;
+	clear:both;
 }
 
 button {
