--- a/static/style.css
+++ b/static/style.css
@@ -180,18 +180,38 @@ textarea {
 	box-sizing: border-box;
 }
 
+#status{
+
+}
+
 #editor_area{
 	margin-top: 12px;
 	height: 88%;
 }
 
+#submitCode{
+}
+
 #compilation_level{
-	display:inline;
+	display: inline;
+	margin-left: 10px;
+	margin-top: 12px;
 }
 
 #optimize_checkbox{
-	display:inline;
 	font-size: 20px;
+	margin-left: 0px;
+	padding-right: 0px;
+
+}
+
+#saveCode{
+	display: inline;
+	margin-top: 8px;
+}
+
+#editor_area label{
+	padding-left: 30px;
 }
 
 #code_info{
@@ -239,7 +259,6 @@ textarea {
 	padding-right: 20px;
 	display: inline;
 }
-
 
 .user_button:last-child {
 	padding-right: 0px;
