--- a/static/style.css
+++ b/static/style.css
@@ -394,3 +394,22 @@ text.shadow {
   stroke-width: 3px;
   stroke-opacity: .8;
 }
+
+body {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: steelblue;
+}
+
+.x.axis path {
+  display: none;
+}
