--- a/static/style.css
+++ b/static/style.css
@@ -129,7 +129,7 @@ textarea {
 	height: 32px;
 	box-shadow: 0px 0px 5px 0px black;
 	display: inline;
-	z-index: 2;
+	z-index: 3;
 	cursor: default;
 	/*border-top: 1px solid #FFF;*/
 }
@@ -142,13 +142,36 @@ textarea {
 	z-index: 15;
 }
 
-#content{
+#content {
 	position: relative;
 	background-color: #FFF;
 	margin-top: 30px;
+	top: 30px;
 	width: 100%;
 	height: 100%;
 	z-index: 0;
+}
+
+.notification {
+	position: relative;
+	background-color: #B9FFAE;
+	top: 40px;
+	height: 30px;
+	width: 50%;
+	margin: 0 auto;
+	z-index: 1;
+	text-align: center;
+	/* Border Radius */
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	/* Box Shadow */
+	-webkit-box-shadow: 0px 2px 5px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    0px 2px 5px rgba(50, 50, 50, 0.75);
+	box-shadow:         0px 2px 5px rgba(50, 50, 50, 0.75);
+	}
+.notification > p {
+	margin: 0px;
+	line-height: 32px;
 }
 
 #myCanvas {
