--- a/static/style.css
+++ b/static/style.css
@@ -146,7 +146,7 @@ textarea {
 	position: relative;
 	background-color: #FFF;
 	margin-top: 30px;
-	top: 30px;
+	top: 10px;
 	width: 100%;
 	height: 100%;
 	z-index: 0;
@@ -159,8 +159,7 @@ textarea {
 	height: 30px;
 	width: 50%;
 	margin: 0 auto;
-	z-index: 1;
-	text-align: center;
+	z-index: 3;
 	/* Border Radius */
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -171,8 +170,12 @@ textarea {
 	}
 .notification > p {
 	margin: 0px;
+	padding: 0px;
+	vertical-align: middle;
 	text-align: center;
 	line-height: 32px;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 #myCanvas {
