--- a/static/style.css
+++ b/static/style.css
@@ -157,12 +157,28 @@ text-align:center;
 	/*border-top: 1px solid #FFF;*/
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 5px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #D1D1D1;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.5); 
+}
+
 #file_select {
 	position: absolute;
 	background-color: white;
 	width: 40%;
 	height: 70%;
 	z-index: 15;
+	overflow-y:scroll;
 }
 
 #file_select_table {
