--- a/static/style.css
+++ b/static/style.css
@@ -158,7 +158,7 @@ text-align:center;
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
 }
  
 ::-webkit-scrollbar-track {
@@ -178,6 +178,7 @@ text-align:center;
 	width: 40%;
 	height: 70%;
 	z-index: 15;
+	padding: 10px 30px;
 	overflow-y:scroll;
 }
 
