--- a/static/style.css
+++ b/static/style.css
@@ -143,7 +143,7 @@ text-align:center;
 }
 
 #titlebar{
-	background: #C1CCD6;
+	background: -webkit-linear-gradient(top, #ECECEC 25%, #C1CCD6 100%);
 	padding: 0px 0px;
 	margin: 0px 0px;
 	position: fixed;
@@ -319,7 +319,7 @@ text-align:center;
 	z-index: 0;
 	border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  background: linear-gradient(top, #AAA 50%, #ECECEC 100%);
+  background: -webkit-linear-gradient(top, #ECECEC 0%, #D1D1D1 100%);
   text-shadow: 0px 1px #FFF;
   margin: 0px -4px;
   font-size: 18px;
