--- a/static/style.css
+++ b/static/style.css
@@ -199,9 +199,10 @@ text-align:center;
 }
 
 .notification {
-	position: relative;
+	position: fixed;
 	background-color: #B9FFAE;
 	top: 40px;
+	left: 23%;
 	height: 30px;
 	width: 50%;
 	margin: 0 auto;
@@ -238,7 +239,7 @@ text-align:center;
 	padding-left: 57px;
 	padding-right: 28px;
 	width: 40%;
-	height: 100%;
+	height: 90%;
 	box-sizing: border-box;
 	border-right: 1px solid #AAA;
 }
